--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=datamoon-transfer-to-arman
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=adm!n
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+external.base-url=http://172.20.15.74:4001
+external.username=pedas
+external.password=F$gewBqeDgS7V
